:bug: core 降 Java 17 + 修掉 Bukkit 插件因描述符编码而完全不加载
core 降级
- BridgeRuntime 的 dispatcher 从虚拟线程换成缓存线程池，core_java_release 21 -> 17
- 虚拟线程是 Java 21 API，而 1.20.1 跑在 Java 17 上；这是任何 1.20.1 路线的公共前置
- 选缓存池是因为它保住两个性质：任务不等空闲线程、任务不被拒绝

修编码 bug（第 4 步的回归）
- 描述符的公共字段从 gradle.properties 挪到 descriptors.properties（UTF-8）
- gradle.properties 是 Java Properties（ISO-8859-1），非 ASCII 被双重编码后含 C1 控制字符，
  YAML 1.1 拒绝它们 -> Paper/Spigot 报 Invalid plugin.yml 且插件 0 加载
- 根构建用 InputStreamReader(UTF_8) 读入并挂成根项目 extra property，5 个平台脚本无需改动
- ProcessResources 显式设 filteringCharset = UTF-8

文档
- MULTIPLATFORM 8.6 重写：legacy 大概率不用建，1.20.1 的 Forge 可用
  net.neoforged.moddev.legacyforge（与主构建的 moddev 同 artifact 同版本）
- README / PLATFORM-PLAN 里字段出处的引用一并更新

验证：clean build 31 任务绿；core 47 用例 0 失败；javap 实测 core/bukkit-common=61(Java 17)、
paper=69(Java 25)；4 个 jar 的描述符 0 未展开 / 0 C1 控制字符 / 中文逐字正确；
Paper 26.2 真机两次（paper 正常启用与停用、spigot 走到拒绝路径），0 个 Invalid plugin.yml